# rapier-gdext

./: .gitignore  README.md
godot/: godot_rapier.gdextension  icon.svg.import  project.godot
godot/.godot/: extension_list.cfg
godot/.godot/editor/: create_recent.Node  editor_layout.cfg  filesystem_cache8  filesystem_update4  main.tscn-editstate-3ad5c15c4f3250da0cc7c1af1770d85f.cfg  main.tscn-folding-3ad5c15c4f3250da0cc7c1af1770d85f.cfg  project_metadata.cfg  recent_dirs  script_editor_cache.cfg
godot/scenes/: RapierPhysicsState.gd  main.tscn
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/backend/: mod.rs
rust/src/frontend/: mod.rs
rust/src/middleware/: mod.rs
